--- a/composer.json
+++ b/composer.json
@@ -35,12 +35,12 @@
     },
     "autoload": {
         "psr-4": {
-            "GuzzleRetry\\": "src"
+            "ImpreseeGuzzleRetry\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "GuzzleRetry\\": "tests"
+            "ImpreseeGuzzleRetry\\": "tests"
         }
     },
     "scripts": {
